# deepin-movie-reborn

./: .clog.toml  .gitignore  .project.json  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  HACKING.md  LICENSE  LICENSE.OpenSSL  README.md  README.zh_CN.md  com.deepin.movie.service  config.h  config.h.in  deepin-movie.desktop  deepin-movie.pro  deploy_dep  gitcommit_template  linglong.yaml
.reuse/: dep5
examples/test/: CMakeLists.txt  dmr_test.cpp  window.cpp  window.h
src/: CMakeLists.txt  actions.cpp  actions.h  burst_screenshots_dialog.cpp  compositing_manager.cpp  compositing_manager.h  deepin-movie.desktop  dmr_settings.cpp  dmr_settings.h  dmr_titlebar.cpp  dmr_titlebar.h  event_monitor.cpp  event_monitor.h  event_relayer.cpp  install.pri  main.cpp  mainwindow.cpp  mainwindow.h  movieinfo_dialog.cpp  mpv_glwidget.cpp  mpv_glwidget.h  mpv_proxy.cpp  mpv_proxy.h  notification_widget.cpp  notification_widget.h  options.cpp  options.h  playlist_model.cpp  playlist_model.h  playlist_widget.cpp  playlist_widget.h  resources.qrc  shortcut_manager.cpp  shortcut_manager.h  src.pro  titlebar_proxy.cpp  titlebar_proxy.h  toolbox_proxy.cpp  toolbox_proxy.h  toolbutton.cpp  (+5 more)
src/accessibility/: ac-deepin-movie-define.h  ac-desktop-define.h  acobjectlist.h
src/accessible/: accessiblefunctions.h  accessiblelist.h
src/backends/: vpu_proxy.cpp  vpu_proxy.h
src/backends/mediaplayer/: qtplayer_glwidget.cpp  qtplayer_glwidget.h  qtplayer_proxy.cpp  qtplayer_proxy.h  videosurface.cpp  videosurface.h
src/backends/mpv/: mpv_glwidget.cpp  mpv_glwidget.h  mpv_proxy.cpp  mpv_proxy.h
src/backends/vpu/: hw_mixer.c  vpu_decoder.cpp  vpu_decoder.h  vpu_proxy.cpp  vpu_proxy.h  vpuhelper.c
src/common/: actions.cpp  actions.h  compositing_manager.cpp  compositing_manager.h  dbus_adpator.cpp  dbus_adpator.h  dbusutils.cpp  dbusutils.h  diskcheckthread.cpp  diskcheckthread.h  dmr_settings.cpp  dmr_settings.h  event_monitor.cpp  event_monitor.h  event_relayer.cpp  event_relayer.h  filter.cpp  filter.h  hwdec_probe.cpp  hwdec_probe.h  libraryloader.cpp  libraryloader.h  mainwindow.cpp  mainwindow.h  movie_configuration.cpp  movie_configuration.h  online_sub.cpp  online_sub.h  options.cpp  options.h  player_backend.h  player_engine.cpp  player_engine.h  playlist_model.cpp  playlist_model.h  settings_translation.cpp  shortcut_manager.cpp  shortcut_manager.h  singleton.h  sysutils.cpp  (+11 more)
src/common/platform/: platform_dbus_adpator.cpp  platform_dbus_adpator.h  platform_dmr_settings.cpp  (+5 more)
src/dlna/: cdlnasoappost.cpp  cdlnasoappost.h  cssdpsearch.cpp  cssdpsearch.h  dlnacontentserver.cpp  dlnacontentserver.h  getdlnaxmlvalue.cpp  getdlnaxmlvalue.h
src/icons/: theme-icons.qrc
src/libdmr/: CMakeLists.txt  com.deepin.deepin-movie.gschema.xml  compositing_manager.cpp  compositing_manager.h  dvd_utils.cpp  dvd_utils.h  eventlogutils.cpp  eventlogutils.h  filefilter.cpp  filefilter.h  gstutils.cpp  gstutils.h  libdmr.pc.in  libdmr.pro  movie_configuration.cpp  movie_configuration.h  online_sub.cpp  online_sub.h  player_backend.cpp  player_backend.h  player_engine.cpp  player_engine.h  player_widget.cpp  player_widget.h  playlist_model.cpp  playlist_model.h  utils.cpp  utils.h
src/libffmpegthumbnailer/: imagetypes.h  imagewriter.h  moviedecoder.cpp  videothumbnailerc.h
src/test/: CMakeLists.txt  dmr_test.cpp
src/translations/: deepin-movie.ts  deepin-movie_af.ts  deepin-movie_am_ET.ts  deepin-movie_ar.ts  deepin-movie_ast.ts  deepin-movie_az.ts  deepin-movie_bg.ts  deepin-movie_bn.ts  deepin-movie_bo.ts  deepin-movie_br.ts  deepin-movie_ca.ts  deepin-movie_cs.ts  deepin-movie_da.ts  deepin-movie_de.ts  deepin-movie_el.ts  deepin-movie_en.ts  deepin-movie_en_AU.ts  deepin-movie_eo.ts  deepin-movie_es.ts  deepin-movie_es_419.ts  deepin-movie_fa.ts  deepin-movie_fi.ts  deepin-movie_fil.ts  deepin-movie_fr.ts  deepin-movie_gl_ES.ts  deepin-movie_he.ts  deepin-movie_hi_IN.ts  deepin-movie_hr.ts  deepin-movie_hu.ts  deepin-movie_hy.ts  deepin-movie_id.ts  deepin-movie_it.ts  deepin-movie_ja.ts  deepin-movie_ko.ts  deepin-movie_ku_IQ.ts  deepin-movie_lt.ts  deepin-movie_ml.ts  deepin-movie_mn.ts  deepin-movie_ms.ts  deepin-movie_nb.ts  (+22 more)
src/widgets/: animationlabel.cpp  animationlabel.h  burst_screenshots_dialog.cpp  burst_screenshots_dialog.h  dmr_lineedit.cpp  dmr_lineedit.h  mircastshowwidget.cpp  mircastshowwidget.h  mircastwidget.cpp  mircastwidget.h  movie_progress_indicator.cpp  movie_progress_indicator.h  movieinfo_dialog.cpp  movieinfo_dialog.h  moviewidget.cpp  moviewidget.h  mpv_glwidget.cpp  mpv_glwidget.h  mpv_proxy.cpp  mpv_proxy.h  notification_widget.cpp  notification_widget.h  playlist_widget.cpp  playlist_widget.h  slider.cpp  slider.h  tip.cpp  tip.h  titlebar.cpp  titlebar.h  toolbox_proxy.cpp  toolbox_proxy.h  toolbutton.cpp  toolbutton.h  url_dialog.cpp  url_dialog.h  videoboxbutton.cpp  videoboxbutton.h  volumeslider.cpp  volumeslider.h
src/window/: QtGuiDepends  qtgui-config.h  qtgui-config_p.h  qtguiversion.h
tests/: CMakeLists.txt  _find_never_entered.py  _uncovered_ranges.py  _wrap_cold_blocks.py  _wrap_zero_fns.py  application.cpp  application.h  deploy-ut-resources.sh  gtestview.cpp  gtestview.h  main.cpp  mpris_test.cc  test-prj-running.sh  test_qtestmain.cpp
tests/at/: at-tree.yaml  cases_mapped.yaml  cases_raw.yaml  compact_tree.txt
tests/casefile/: 统信桌面操作系统-V25-用例-影院.xlsx
tests/common/: test_mainwindow.cpp  test_movieapp.cpp  test_request_actions.cpp  test_settings.cpp  test_toolbox_proxy.cpp
tests/deepin-movie/: CMakeLists.txt  application.cpp  application.h  test_qtestmain.cpp  ut-build-run.sh
tests/deepin-movie-platform/: CMakeLists.txt  application.cpp  application.h  play.conf  test_qtestmain.cpp  ut-batched-coverage.sh  ut-build-run.sh
tests/libdmr/: test_dmr.cpp  test_online_sub.cpp  test_player_engine.cpp  test_settings.cpp  test_wayland.cpp
tests/stub/: stub_function.cpp  stub_function.h
tests/ut_dmr-test/: CMakeLists.txt  application.cpp  application.h  test.cpp  test_qtestmain.cpp  ut-build-run.sh
tests/widgets/: test_playlist_widget.cpp
(+435 files in other folders)
